--- a/titlepages/cover.tex
+++ b/titlepages/cover.tex
@@ -9,7 +9,7 @@ Thomas Brüggemann
 % Bacheloararbeit
 \begin{center}
 \textbf{
-    Bachelorarbeit
+    Masterarbeit
 \linebreak
     im Fach Allgemeine Wirtschaftsinformatik}
 \end{center}
@@ -33,9 +33,9 @@ Thomas Brüggemann
 
 % Vorgelegt
 \begin{center}
-    Vorgelegt in der Bachelorprüfung
+    Vorgelegt in der Masterprüfung
 \linebreak
-    im Studiengang Wirtschaftsinformatik
+    im Studiengang Information Systems
 \linebreak
     der Wirtschafts- und Sozialwissenschaftlichen Fakultät
 \linebreak
@@ -46,7 +46,7 @@ Thomas Brüggemann
 
 % Köln, April 2013
 \begin{center}
-Köln, April 2013
+Köln, Februar 2016
 \end{center}
 
 
