--- a/expose.tex
+++ b/expose.tex
@@ -18,8 +18,8 @@
 \usepackage{times}            % Times New Roman
 
 \usepackage[utf8]{inputenc}   % utf-8
-\usepackage[german]{babel}    % deutsche Silbentrennung
-\selectlanguage{german}       % deutsche Betitelung
+\usepackage[english]{babel}    % deutsche Silbentrennung
+\selectlanguage{english}       % deutsche Betitelung
 \usepackage{nicefrac} 
 \usepackage{longtable}
 
@@ -100,8 +100,8 @@
 \newpage
 
 % Abkürzungsverzeichnis
-\section*{Abkürzungsverzeichnis}
-\addcontentsline{toc}{section}{Abkürzungsverzeichnis}
+\section*{Index of Abbreviations}
+\addcontentsline{toc}{section}{Index of Abbreviations}
 \begin{acronym}[TTTTTTTTTTTTTTTTTTTT]
     \acro{XML}{Extensible Markup Language}
     \acro{SaaS}{Software as a Service}
@@ -115,9 +115,8 @@
 \setstretch{1,5}
 \pagenumbering{arabic}
 
-% Inhalt
-% ---------
-\section{Problemstellung}
+% PROBLEM STATEMENT %
+\section{Problem Statement}
 Cloud Computing ist, durch seine fast unbegrenzte Verfügbarkeit von Rechenleistung und Speicherkapazität
 \footnote{\cite{Nallur.2012}, S. 2.}, 
 ein vielversprechendes Bereitstellungsmodell von IT-Ressourcen. Es bietet durch dynamische und automatische Ressourcenallokation Kostenvorteile für Unternehmen, die bisher, durch zu hohe Initalkosten, keinen Zugriff auf solch große Rechenleistungen und Speicherkapazitäten hatten. 
@@ -137,16 +136,16 @@ Als Problem in der Forschung besteht ein Wissendefizit über die Adressierung de
 
 
 
-% ZIEL DER ARBEIT %
-\section{Ziel der Arbeit}
+% OBJECTIVES %
+\section{Ojectives}
 Das Hauptziel dieser Bachelorarbeit ist die Frage, wie die Herausforderungen im Themengebiet Cloud Computing in wissenschaftlicher Fachliteratur und Konferenzbeiträgen, seit Mai 2012, adressiert wurden.
 Das erste Teilziel ist die Identifizierung der behandelten Herausforderungen. Darauf folgt eine quantitative Auswertung und Einordnung der Herausforderungen, die offenlegt in welchen Quellen welche Kernherausforderungen erörtert wurden.
 Als drittes Teilziel wird die Frage beantwortet, wie die Herausforderungen adressiert wurden und welche Lösungsvorschläge für diese gegeben wurden. Zuletzt wird, als viertes Teilziel, ein Ausblick auf weitere Forschung im Themagebiet Cloud Computing gegeben und mögliche Lücken in der bisherigen Fachliteratur, zu bestehenden Herausforderungen, aufgezeigt.
 
 
-% BEGRIFFSKLÄRUNG %
-\section{Begriffsklärung}
-Im Laufe der Arbeit tauchen Begriffe auf, die ich im Folgenden definieren möchte:
+% DEFINITIONS %
+\section{Definitions}
+Certain terms are used in the remainder of this thesis that need to be defined:
 
 % Cloud Computing
 \subsection{Cloud Computing}
@@ -172,8 +171,8 @@ Als Cloud-Service-Provider werden die Unternehmen und Einrichtungen bezeichnet, 
 Sie stellen neben den Nutzern, Ermöglichern und Regulatoren der Dienste eine weitere Stakeholder-Gruppe von Cloud Computing dar.
 
 
-% VORGEHENSWEISEN %
-\section{Vorgehensweise}
+% METHODS %
+\section{Methods}
 Um einen Überblick über die Literatur und Konferenzbeiträge aus dem Themengebiet Cloud Computing, von Mai 2012 bis heute, zu erhalten wird ein systematischer Literaturreview durchgeführt. Dazu werden die Online-Portale EBSCO Academic Source Complete, IEEEXplore, ProQuest, ACM Digital Library, SienceDirect und AISEL mit vordefinierten Suchstrings zu den Schlagwörtern 
 \glqq Cloud\grqq,
 \glqq Software as a Service\grqq,
@@ -189,8 +188,8 @@ Die Ergebnisse werden strukturiert in einer Excel Tabelle festgehalten. Für jed
 Im Zuge der Auswertung werden Lösungsvorschläge der Quellen gruppiert und quantitativ analysiert.
 
 
-% GLIEDERUNG %
-\section{Gliederung}
+% STRUCTURE %
+\section{Structure}
 Es folgt eine Erläuterung der Gliederung der Bachelorarbeit. In Klammern steht jeweils der geschätzte bzw. anvisierte Umfang des jeweiligen Kapitels.
 \newline\newline
 % Tabelle der Gliederung
@@ -231,13 +230,13 @@ Es folgt eine Erläuterung der Gliederung der Bachelorarbeit. In Klammern steht 
     4 Schlussbetrachtung & Abschließende kritische Reflexion der erarbeiteten Ergebnisse, Beurteilung der Zielerreichung und kritische  Würdigung der Arbeit (1-2 Seiten)
 \end{longtable}
 
-% ERWARTETE ERGEBNISSE %
-\section{Erwartete Ergebnisse}
+% EXPECTED RESULTS %
+\section{Expected Results}
 Als erwartetes Ergebnis dieser Bachelorarbeit geht ein systematischer Literaturreview hervor. Es ergibt sich eine Übersicht über die Herausforderungen im Themengebiet Cloud Computing, die in wissenschaftlichen Fachartikeln und Konferenzbeiträgen seit Mai 2012 bis heute, adressiert wurden. Gegebenenfalls werden einige Herausforderungen, die Nutzer oder Anbieter von Cloud Computing dazu bewegen würden auf Cloud Computing zu verzichten, gar nicht oder nicht ausreichend genug durch die Forschung in Literatur oder Konferenzen adressiert. Dieser Umstand würde in der Schlussbetrachtung und dem Ausblick auf zukünftige Forschungsfelder berücksichtigt werden.
 
-% OFFENE PUNKTE UND PROBLEME %
-\section{Offene Punkte und Probleme}
-Es ergaben sich bisher keine eine offenen Punkte oder Probleme.
+% PROBLEMS %
+\section{Problems}
+So far there are no open questions or problems.
 
 % --------------------
 % Literaturverzeichnis
