--- a/titlepages/cover.tex
+++ b/titlepages/cover.tex
@@ -9,7 +9,7 @@ Thomas Brüggemann
 % Bacheloararbeit
 \begin{center}
 \textbf{
-    Masterarbeit
+    Master Thesis
 \linebreak
     im Fach Allgemeine Wirtschaftsinformatik}
 \end{center}
