--- a/titlepages/cover.tex
+++ b/titlepages/cover.tex
@@ -19,7 +19,7 @@ Thomas Brüggemann
 % Titel
 \begin{center}
 \LARGE 
-    Cloud Computing - State of the Art
+    Automating the privacy risk assessment for mHealth apps
 \end{center}
 
 \vspace*{8mm}
