--- a/expose.tex
+++ b/expose.tex
@@ -18,8 +18,8 @@
 \usepackage{times}            % Times New Roman
 
 \usepackage[utf8]{inputenc}   % utf-8
-\usepackage[english]{babel}    % deutsche Silbentrennung
-\selectlanguage{english}       % deutsche Betitelung
+\usepackage[english]{babel}    % english hyphenation
+\selectlanguage{english}       % english titles
 \usepackage{nicefrac} 
 \usepackage{longtable}
 
@@ -42,24 +42,33 @@
 \renewcommand{\footnotemargin}{2.2em}          % margin between text and number
 \setlength{\footnotesep}{1.3em}                % space between footnotes
 \setlength{\skip\footins}{2.5em}               % space between text & footnotes
+\usepackage{savefnmark}
 
 % Abkürzungen
 \usepackage[printonlyused]{acronym}    
 \renewcommand{\bflabel}[1]{{#1\hfill}}
 
-% Seitennummerierung oben\usepackage{scrpage2} 
-\usepackage[dvips]{color}\clearscrheadfoot \chead[\pagemark]{\textcolor[gray]{0.5}{\pagemark}} \pagestyle{scrheadings}
+% Seitennummerierung oben
+\usepackage{scrpage2} 
+\usepackage[dvips]{color}
+\clearscrheadfoot 
+\chead[\pagemark]{\textcolor[gray]{0.5}{\pagemark}} 
+\pagestyle{scrheadings}
 
-% TOC Styles
+% TOC, LOF, FIG Styles
 \usepackage{tocloft, titletoc}  
 \setlength{\cftaftertoctitleskip}{0em}
+\renewcommand{\cftloftitlefont}{\bfseries}
+%\renewcommand{\cftfigfont}{\bfseries}
 \renewcommand{\cfttoctitlefont}{\bfseries}
+\renewcommand{\cftlottitlefont}{\bfseries}
 \titlecontents{section}     % set formatting for \section 
 [2.3em]                     % adjust left margin
 {\vspace{0.5em}}            % font formatting
 {\hspace{-1.8em}.\contentslabel{0.7em}\hspace{1em}} % section label and offset
 {\hspace*{-2.3em}}
 {\titlerule*[1mm]{.}\contentspage}
+
 \titlecontents{subsection}  % set formatting for \subsection 
 [3em]                       % adjust left margin
 {\vspace{0.5em}}            % font formatting
@@ -67,26 +76,74 @@
 {\hspace*{-2.3em}}
 {\titlerule*[1mm]{.}\contentspage}
 
+\titlecontents{subsubsection}  % set formatting for \subsubsection 
+[4.2em]                       % adjust left margin
+{\vspace{0.5em}}            % font formatting
+{\contentslabel{2.3em}}     % section label and offset
+{\hspace*{-2.3em}}
+{\titlerule*[1mm]{.}\contentspage}
+
+\titlecontents{figure}      % set formatting for \subsection 
+[2.3em]                     % adjust left margin
+{\vspace{0.5em}}            % font formatting
+{\contentslabel{2.3em}}     % section label and offset
+{\hspace*{-2.3em}}
+{\titlerule*[1mm]{.}\contentspage}
+
+\titlecontents{table}       % set formatting for \subsection 
+[3.4em]                     % adjust left margin
+{\vspace{0.5em}}            % font formatting
+{:\hspace*{0.9em}\contentslabel{4.5em}}     % section label and offset
+{\hspace*{-2.3em}}
+{\titlerule*[1mm]{.}\contentspage}
+
+
 % Literaturverzeichnis
 \usepackage[
     bibstyle=authortitle,
     citestyle=authoryear,
+    backend=biber,
     isbn=false,
     url=false,
     doi=false,
     maxcitenames=3,
     maxbibnames=30
 ]{biblatex}
-\addbibresource{literature.bib}
+\addbibresource{library.bib}
 \let\cite\textcite
 
-% spezielles Abbildungsnummerierungszeugs
+\usepackage{caption}
 \usepackage{chngcntr}
+
+% Tabellenpackete
 \usepackage{array}
-\usepackage[table]{xcolor}
+\usepackage{xcolor}
+\usepackage{longtable}
 \usepackage{setspace}
+\counterwithin{table}{section}
+\usepackage{multirow}
+
+% Grafiken anzeigen
+\usepackage[pdftex]{graphicx}
+\graphicspath{{figures}}
+\counterwithin{figure}{section}
+\usepackage[absolute,overlay]{textpos}
 
 \begin{document}
+
+% Renews
+\renewcommand{\figurename}{Figure}
+\renewcommand{\tablename}{Table}
+\renewcommand\thefigure{\arabic{section}-\arabic{figure}}
+\renewcommand\thetable{Tab. \arabic{section}-\arabic{table}}
+\newcommand{\todo}[1]{\textbf{\textsc{\textcolor{red}{TODO: #1}}}}
+
+% Variables
+\newcommand{\mH}{mHealth }
+\newcommand{\ap}{app provider}
+\newcommand{\pp}{privacy policy}
+\newcommand{\pps}{privacy policies}
+
 \pagenumbering{Roman}
 
 % Deckblatt
@@ -103,11 +160,7 @@
 \section*{Index of Abbreviations}
 \addcontentsline{toc}{section}{Index of Abbreviations}
 \begin{acronym}[TTTTTTTTTTTTTTTTTTTT]
-    \acro{XML}{Extensible Markup Language}
-    \acro{SaaS}{Software as a Service}
-    \acro{PaaS}{Platform as a Service}
-    \acro{IaaS}{Infrastructure as a Service}
-    \acro{XaaS}{Everything as a Service}
+    \acro{mHealth}{Mobile Health}
 \end{acronym}
 \newpage
 
@@ -117,30 +170,13 @@
 
 % PROBLEM STATEMENT %
 \section{Problem Statement}
-Cloud Computing ist, durch seine fast unbegrenzte Verfügbarkeit von Rechenleistung und Speicherkapazität
-\footnote{\cite{Nallur.2012}, S. 2.}, 
-ein vielversprechendes Bereitstellungsmodell von IT-Ressourcen. Es bietet durch dynamische und automatische Ressourcenallokation Kostenvorteile für Unternehmen, die bisher, durch zu hohe Initalkosten, keinen Zugriff auf solch große Rechenleistungen und Speicherkapazitäten hatten. 
-\footnote{Dieser Absatz folgt \cite{Marston.2011}, S. 177-178.}
-Ein weiterer Vorteil von Cloud Computing ist der hohe Grad an Automatisierung und Virtualisierung, was wiederum zu besserer Lastverteiltung und effizienterer Ressourcenauslastung führt.
-\footnote{Vgl. zu diesem und dem folgenden Satz \cite{Boss.2007}, S. 4.}
-Dies eröffnet neue Möglichkeiten der Ressourcennutzung, die den Fokus auf Innovationen und schnelle Produktionszeiten legt.
+The market for mobile smartdevice applications (apps) is growing extensively in recent years. It is increasingly easier for small companies or even single developers to create unique apps that reach millions of users via app stores.
+This market growth also effected mobile health (\mH) apps. More and more apps are available that support the users in solving their health related issues and information deficiencies. Users are asked to input their personal information in order to tailor the app to their custom needs. The users are asked to expose vulnerable information about their health status while it remains mostly unclear how and where the data is processed, stores or tossed along.
 
-Einer der vielleicht spannendesten Vorteile von Cloud Computing ist, dass durch die genannte Kosteneffizienz und dezentrale Infrastruktur, auf der Cloud Computing basiert, IT-Ressourcen für Dritte-Welt-Länder zugänglich gemacht werden können, die bisher dazu keine Möglichkeiten hatten. 
-\footnote{\cite{Marston.2011}, S. 178.}
-Das könnte zu einer IT-Revolution in diesen Ländern führen.
-
-Mit diesen Vorteilen, die Cloud Computing bietet, kommen aber in der Praxis Herausforderungen zu Tage, die adressiert werden müssen, da Cloud Computing für Unternehmen ein immenser Kostenvorteil sein kann. Die Kosten die durch das Fortbestehen klassischer IT-Bereitstellungsmodelle entstehen liegen, unter Umständen, deutlich über den Kosten der Nutzung von Cloud Computing. Des weiteren ist es sinnvoll die Herausforderungen im Themengebiet Cloud Computing zu lösen, da sich für einige Unternehmen ganz neue Möglichkeiten bieten, größere Datenmengen schneller auszuwerten und damit Wettbewerbsvorteile gegenüber Mitbewerbern zu erlangen.
-\footnote{\cite{Marston.2011}, S. 177.}
-
-Als Problem in der Forschung besteht ein Wissendefizit über die Adressierung der Herausforderungen im Themengebiet Cloud Computing in wissenschaftlicher Fachliteratur und Konferenzbeiträgen. Eine Übersicht über die Herausforderungen bietet den Nutzen, diejenigen Herausforderungen die bisher in der Literatur nicht intensiv genug adressiert wurden zu identifizieren und die bereits vorhandenen Lösungsansätze aufzuzeigen.
-
-
+The information about privacy practices of the \ap s should be found in the privacy policy document provided by the \ap. Processing these \pps requires a higher level of education and time to read through large documents of text to find the relevant information. Additionally, the important information is hidden in legal language.\footnote{\cite{Dehling2014}, p. 11}
 
 % OBJECTIVES %
-\section{Ojectives}
-Das Hauptziel dieser Bachelorarbeit ist die Frage, wie die Herausforderungen im Themengebiet Cloud Computing in wissenschaftlicher Fachliteratur und Konferenzbeiträgen, seit Mai 2012, adressiert wurden.
-Das erste Teilziel ist die Identifizierung der behandelten Herausforderungen. Darauf folgt eine quantitative Auswertung und Einordnung der Herausforderungen, die offenlegt in welchen Quellen welche Kernherausforderungen erörtert wurden.
-Als drittes Teilziel wird die Frage beantwortet, wie die Herausforderungen adressiert wurden und welche Lösungsvorschläge für diese gegeben wurden. Zuletzt wird, als viertes Teilziel, ein Ausblick auf weitere Forschung im Themagebiet Cloud Computing gegeben und mögliche Lücken in der bisherigen Fachliteratur, zu bestehenden Herausforderungen, aufgezeigt.
+\section{Objectives}
 
 
 % DEFINITIONS %
@@ -148,98 +184,23 @@ Als drittes Teilziel wird die Frage beantwortet, wie die Herausforderungen adres
 Certain terms are used in the remainder of this thesis that need to be defined:
 
 % Cloud Computing
-\subsection{Cloud Computing}
-Cloud Computing bezeichnet den Ansatz, Server-Infrastruktur oder Software-Dienste skalierbar, einfach und jeder Zeit abrufbar, für verschiedenste Kunden, zur Verfügung zu stellen.
-\footnote{dieser Abschnitt folgt \cite{Mell.2011}, S. 2-3.}
-Zudem müssen die Computer-Ressourcen so dynamisch und elastisch nutzbar sein, dass es dem Kunden möglich ist, automatisch, in Sekundenschnelle seinen Ressourcenbedarf, durch Hoch- und Herunterskalierung, zu decken.
-\footnote{\cite{Boss.2007}, S. 7.}
-Die Skalierung soll ohne Eingriff eines Mitarbeiters des Cloud-Service-Providers
-\footnote{\cite{Mell.2011}, S. 2}, also automatisiert über Web Services, ablaufen.
-
-% Web Services
-\subsection{Web Service}
-Ein Web Service ist eine Softwarekomponente, die plattformübergreifenden Datenaustausch zwischen Anwendungen über standarisierte Webkommunikationsprotokolle zur Verfügung stellt.
-\footnote{\cite{Laudon.2010}, S. 246.}
-Üblicherweise bauen diese Protokolle auf bereits vorhandenen Standards, wie der Auszeichnungssprache \acs{XML}, auf
-\footnote{\cite{Curbera.2002}, S. 86.}  
-und befinden sich in einem für Maschinen lesbaren Format.
-
-% Cloud-Service-Provider
-\subsection{Cloud-Service-Provider}
-Als Cloud-Service-Provider werden die Unternehmen und Einrichtungen bezeichnet, die Cloud Computing Dienstleistungen zur Verfügung stellen und für deren Betrieb und Wartung verantwortlich sind.
-\footnote{Vgl. zu diesem und dem folgenden Satz \cite{Marston.2011}, S. 183.} 
-Sie stellen neben den Nutzern, Ermöglichern und Regulatoren der Dienste eine weitere Stakeholder-Gruppe von Cloud Computing dar.
-
+\subsection{Mobile health applications}
 
 % METHODS %
 \section{Methods}
-Um einen Überblick über die Literatur und Konferenzbeiträge aus dem Themengebiet Cloud Computing, von Mai 2012 bis heute, zu erhalten wird ein systematischer Literaturreview durchgeführt. Dazu werden die Online-Portale EBSCO Academic Source Complete, IEEEXplore, ProQuest, ACM Digital Library, SienceDirect und AISEL mit vordefinierten Suchstrings zu den Schlagwörtern 
-\glqq Cloud\grqq,
-\glqq Software as a Service\grqq,
-\glqq Platform as a Service\grqq,
-\glqq Infrastructure as a Service\grqq,
-\glqq \acs{SaaS}\grqq,
-\glqq \acs{PaaS}\grqq,
-\glqq \acs{IaaS}\grqq\addspace und
-\glqq \acs{XaaS}\grqq
-durchsucht.
-
-Die Ergebnisse werden strukturiert in einer Excel Tabelle festgehalten. Für jedes Ergebnis wird anhand der Abstract-Zusammenfassung oder des gesamten Textes untersucht, ob es Lösungsvorschläge für bestehende Herausforderungen im Cloud Computing beinhaltet.
-Im Zuge der Auswertung werden Lösungsvorschläge der Quellen gruppiert und quantitativ analysiert.
-
 
 % STRUCTURE %
 \section{Structure}
-Es folgt eine Erläuterung der Gliederung der Bachelorarbeit. In Klammern steht jeweils der geschätzte bzw. anvisierte Umfang des jeweiligen Kapitels.
-\newline\newline
-% Tabelle der Gliederung
-\begin{longtable}{>{\bfseries}p{5.2cm} p{9.1cm}}
-    \arrayrulecolor{lightgray}
-    1 Einleitung & Die Einleitung gibt einen Überblick über die Problemstellung, Zielsetzung, Vorgehensweise und den Aufbau der Arbeit \\\hline
-    
-    1.1 Problemstellung & Beschreibung des Forschungskreislaufes der Bachelorarbeit um das Praxisproblem und dessen Relevanz sowie das Forschungsproblem und dessen Relevanz zu erörtern (1 Seite)\\\hline
-    
-    1.2 Zielsetzung & Beschreibung des Hauptziels und der damit verbundenen Subziele um den Roten Faden der Bachelorarbeit zu verdeutlichen (\nicefrac{1}{2} Seite)\\\hline
-    
-    1.3 Vorgehensweise & Eine kurze Erläuterung der Vorgehensweise des systematischen Literaturreviews, der den Hauptteil der Arbeit ausmacht (1 Seite)\\\hline
-    
-    1.4 Aufbau der Arbeit & Formaler Aufbau und Übersicht der Arbeit wird beschrieben (\nicefrac{1}{2} Seite)\\\hline\hline
-    
-    2 Cloud Computing & Dieses Kapitel beschreibt die grundlegenden Begriffe zum Thema Cloud Computing.\\\hline
-    
-    2.1 Definition & Ausformulierung der Definition, was Cloud Computing auszeichnet (2 Seiten)\\\hline
-    
-    2.2 Servicemodelle & Cloud Computing unterteilt sich in drei Servicemodelle, diese werden hier erörtert (2 Seiten)\\\hline
-    
-    2.3 Bereitstellungsmodelle & Beschreibung der verschiedenen Möglichkeiten Cloud Computing einzusetzen. (1 Seite)\\\hline
-    
-    2.4 Stakeholder & Als Abschluss des Grundlagenteils möchte ich die Stakeholder-Gruppen erwähnen, die im Themengebiet Cloud Computing vertreten sind (1 Seite)\\\hline
-    
-    2.5 Lebenszyklus & Einführung des Lebenszyklus-Modells nach \cite{Schneider.2013} zur Einordnung der Herausforderungen im Themengebiet Cloud Computing nach entsprechendem Vorkommen in den Lebenszyklus-Phasen (1 Seite)  \\\hline\hline
-    
-    3 State of the Art Analyse & Wie wurden die Herausforderungen des Cloud Computing in Literatur und Konferenzbeiträgen adressiert?\\\hline
-    
-    3.1 Herausforderungen im Cloud Computing & Zusammentragen und Erörtern der, in der Literatur und in Konferenzbeiträgen, adressierten Herausforderungen (4 Seiten)\\\hline
-    
-    3.2 Analyse und Einordnung der Herausforderungen & Eine quantitative Analyse der gefundenen Herausforderungen, also die eigentliche Auswertung der Excel-Tabelle (5 Seiten)\\\hline
-
-    3.3 Lösungenvorschläge & Dieser Gliederungspunkt soll die vorhandenen Lösungsvorschläge zu den, in den vorherigen Punkten erarbeiteten Herausforderungen, zusammenfassen. Hier schätze ich den meisten Aufwand, da sehr enge Arbeit mit den Textquellen des Literaturreviews nötig ist (10 Seiten)\\\hline
-    
-    3.4 Ausblick auf zukünftige Forschung & Ausblick auf zukünftige Forschung zu Herausforderungen im Themengebiet Cloud Computing und Herausarbeiten der Lücken in Forschungsliteratur zu bestehenden Herausforderungen (3 Seiten) \\\hline\hline
-    
-    4 Schlussbetrachtung & Abschließende kritische Reflexion der erarbeiteten Ergebnisse, Beurteilung der Zielerreichung und kritische  Würdigung der Arbeit (1-2 Seiten)
-\end{longtable}
 
 % EXPECTED RESULTS %
 \section{Expected Results}
-Als erwartetes Ergebnis dieser Bachelorarbeit geht ein systematischer Literaturreview hervor. Es ergibt sich eine Übersicht über die Herausforderungen im Themengebiet Cloud Computing, die in wissenschaftlichen Fachartikeln und Konferenzbeiträgen seit Mai 2012 bis heute, adressiert wurden. Gegebenenfalls werden einige Herausforderungen, die Nutzer oder Anbieter von Cloud Computing dazu bewegen würden auf Cloud Computing zu verzichten, gar nicht oder nicht ausreichend genug durch die Forschung in Literatur oder Konferenzen adressiert. Dieser Umstand würde in der Schlussbetrachtung und dem Ausblick auf zukünftige Forschungsfelder berücksichtigt werden.
 
 % PROBLEMS %
 \section{Problems}
 So far there are no open questions or problems.
 
 % --------------------
-% Literaturverzeichnis
+% REFERENCES
 % --------------------
 \newpage
 \printbibliography[title={Literaturverzeichnis}]
