continued problem statement

--- a/expose.tex
+++ b/expose.tex
@@ -170,10 +170,11 @@
 
 % PROBLEM STATEMENT %
 \section{Problem Statement}
-The market for mobile smartdevice applications (apps) is growing extensively in recent years. It is increasingly easier for small companies or even single developers to create unique apps that reach millions of users via app stores.
+The market for mobile smart device applications (apps) is growing extensively in recent years. It is increasingly easier for small companies or even single developers to create unique apps that reach millions of users via app stores.
 This market growth also effected mobile health (\mH) apps. More and more apps are available that support the users in solving their health related issues and information deficiencies. Users are asked to input their personal information in order to tailor the app to their custom needs. The users are asked to expose vulnerable information about their health status while it remains mostly unclear how and where the data is processed, stores or tossed along.
 
-The information about privacy practices of the \ap s should be found in the privacy policy document provided by the \ap. Processing these \pps requires a higher level of education and time to read through large documents of text to find the relevant information. Additionally, the important information is hidden in legal language.\footnote{\cite{Dehling2014}, p. 11}
+The information about privacy practices of the \ap s should be found in the privacy policy document provided by the \ap. Processing these \pps requires a higher level of education and time to read through large documents of text to find the relevant information. Additionally, the important information is hidden in legal language or insufficiently addressed, if at all.\footnote{\cite{Dehling2014}, p. 11}
+Aside from the data usage beyond users control, it is also challenging for users to assess what kind of privat information an app asks for, in order to tailor the app experience. Users have to download the apps of interest and try them out, before it becomes clear what information is used. This leads to low inter comparability between apps. If users are looking for specific functionality in a \mH app, it is challenging to find the app that offers the desired functionality at an acceptable privacy risk.
 
 % OBJECTIVES %
 \section{Objectives}
