--- a/expose.tex
+++ b/expose.tex
@@ -207,7 +207,7 @@ The automated process of assessing the privacy risk helps to reduce the costs of
 It is unclear if, and to what degree, the concepts of static code analysis and privacy risk assessment can be combined in order to automate the app assessment.
 This leads to the research question of this master thesis. How and to what degree can the privacy risk assessment of mHealth apps be automated?
 
-\todo{Previous Research}
+\todo{Related Work bei \cite{xu2013techniques} abschauen}
 Previous research in this field reveald...
 
 % OBJECTIVES %
@@ -220,15 +220,18 @@ Certain terms are used in the remainder of this thesis that have to be defined:
 
 % Mobile health apps
 \subsection{Mobile health apps}
-Mobile health \acs{mHealth} apps refers to smartphone or tablet apps that are created to support the users by enabling them to gather information and support regarding
+
+Mobile health \acs{mHealth} apps are smartphone or tablet applications that support the users by enabling them to gather information and support about medical or health related issues.\footnote{See \cite{Dehling2015b}, p. 1}
 
 % Static code analysis %
 \subsection{Static code analysis}
+
 Static code analysis refers to the analysis of an applications source code without actually executing the application. 
 This technique is widely used to detect vulnerabilities or to validate the source code at programming time in e.g. the code editor software. \footnote{See \cite{bardas2010static}, p. 2-3}
 
 % Decompilation %
 \subsection{Decompilation}
+
 
 
 % METHODS %
