--- a/expose.tex
+++ b/expose.tex
@@ -208,10 +208,13 @@ It is unclear if, and to what degree, the concepts of static code analysis and p
 This leads to the research question of this master thesis. How and to what degree can the privacy risk assessment of mHealth apps be automated?
 
 \todo{Related Work bei \cite{xu2013techniques} abschauen}
-Previous research in this field reveald...
+Previous research in this field revealed...
 
 % OBJECTIVES %
 \section{Objectives}
+
+The main objective of this study is to ascertain how or to what degree the assessment of privacy risk factors for \mH apps can be automated.
+This will be done by implementing a software tool that downloads, decompiles and analyses the source code of \mH apps.
 
 
 % DEFINITIONS %
@@ -232,7 +235,10 @@ This technique is widely used to detect vulnerabilities or to validate the sourc
 % Decompilation %
 \subsection{Decompilation}
 
-
+Compilers transfer human readable programming code into machine code and therefore help humans write software applications in understandable text form. 
+Decompilers retrieve the human readable programming code back from the compiled machine code. 
+They aim at reversing the compilation process.
+\footnote{This section follows \cite{nolan2012decompiling}, p. 1-2}
 
 % METHODS %
 \section{Methods}
